--- a/pagina3.html
+++ b/pagina3.html
@@ -42,6 +42,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
   </form>
     <script type="module" src="js/CtrlReservaciones.js">
     </script>
+    <script type="module" src="js/CtrlSesion.js">
+    </script>
 </body>
 
 </html>
