--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             </div>
         </footer>
     </form>
-    
+    <script type="module" src="js/CtrlSesion.js">
+    </script>
 </body>
 
 </html>
