--- a/pagina3.html
+++ b/pagina3.html
@@ -39,6 +39,15 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
       <li>
       </li>
     </ul>
+    <footer id="footer" class="footer">
+      <div class="container">
+          <div class="row">
+              <div class="four columns">
+                  <nav class="menu"><a href="">@Heber Matias Cartagena</a></nav>
+              </div>
+          </div>
+      </div>
+  </footer>
   </form>
     <script type="module" src="js/CtrlReservaciones.js">
     </script>
