--- a/pagina2.html
+++ b/pagina2.html
@@ -46,14 +46,8 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             
           </li>
         </ul>
-        <footer id="footer" class="footer">
-          <div class="container">
-              <div class="row">
-                  <div class="four columns">
-                      <nav class="menu"><a href="">@Heber Matias Cartagena</a></nav>
-                  </div>
-              </div>
-          </div>
+        <footer id="mifooter" class="mifooter">
+          <p>@Heber Matias Cartagena</p>
       </footer>
       </form>
       <script type="module"
