--- a/pagina3.html
+++ b/pagina3.html
@@ -40,7 +40,12 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
       </li>
     </ul>
     <footer id="mifooter" class="mifooter">
-      <p>@Heber Matias Cartagena</p>
+      <div class="container">
+          <div class="row">
+              <div class="four columns">
+                  <nav class="menu"><a href="">@Heber Matias Cartagena</a></nav>
+              </div>
+          </div>
       </div>
   </footer>
   </form>
