--- a/pagina2.html
+++ b/pagina2.html
@@ -46,10 +46,11 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             
           </li>
         </ul>
-        <footer id="mifooter" class="mifooter">
-          <p>@Heber Matias Cartagena</p>
-      </footer>
+        
       </form>
+      <footer class="miFooter">
+        <p>@Heber Matias Cartagena</p>
+      </footer>
       <script type="module"
         src="js/CtrlChat.js">
         </script>
