--- a/pagina2.html
+++ b/pagina2.html
@@ -46,11 +46,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
             
           </li>
         </ul>
-        
-      </form>
-      <footer class="miFooter">
-        <p>@Heber Matias Cartagena</p>
+        <footer id="mifooter" class="mifooter">
+          <p>@Heber Matias Cartagena</p>
       </footer>
+      </form>
       <script type="module"
         src="js/CtrlChat.js">
         </script>
