--- a/pagina3.html
+++ b/pagina3.html
@@ -39,7 +39,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
       <li>
       </li>
     </ul>
-    
+    <footer id="mifooter" class="mifooter">
+      <p>@Heber Matias Cartagena</p>
+  </footer>
   </form>
     <script type="module" src="js/CtrlReservaciones.js">
     </script>
