--- a/pagina5.html
+++ b/pagina5.html
@@ -63,6 +63,9 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this temp
                 <input name="fecha" type="date" required>
             </label>
         </p>
+        <footer id="mifooter" class="mifooter">
+            <p>@Heber Matias Cartagena</p>
+        </footer>
     </form>
     <script type="module" src="js/CtrlReservacion.js">
     </script>
